fixed gap spacing on gifs

--- a/style.css
+++ b/style.css
@@ -27,17 +27,26 @@ body {
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 320px;
     grid-auto-columns: 1fr 1fr;
-    grid-gap: 1rem;
+    gap: 2em 1.5em;
   }
   
   
 /* media queries  */
-@media(max-width: 500px){
+@media(max-width: 780px){
+    .grid-container{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-auto-rows: 320px;
+        gap: 1.5em 1em;
+    }
+}
+
+@media(max-width: 580px){
     .grid-container{
         display: grid;
         grid-template-columns: 1fr;
         grid-auto-rows: 320px;
-        grid-gap: 1rem;
+        grid-gap: 1.5rem;
     }
 }
   
